# agent-scope

./: .gitignore  .gitlab-ci.yml  AGENTS.md  CLAUDE.md  README.md  package-lock.json  package.json  playwright.config.ts
.playwright-mcp/: page-2026-05-06T04-12-33-590Z.yml
.sisyphus/: boulder.json
abtop-collector/: Cargo.toml
abtop-collector/src/collector/: claude.rs  process.rs
abtop-collector/src/model/: session.rs
ci/: Dockerfile
docs/: ci-cd-setup.md  claude-memory-v0.1-acceptance-report.md  claude-memory-v0.2-p1-user-validation.md  (+17 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_state.rs  commands.rs  lib.rs  main.rs  registry.rs  utils.rs  watcher.rs
src-tauri/src/collectors/: mod.rs
src-tauri/src/collectors/agent/: mod.rs
src-tauri/src/collectors/claude_history/: mod.rs  models.rs  path_codec.rs  scanner.rs
src-tauri/src/collectors/claude_memory/: dedup.rs  frontmatter.rs  health_checker.rs  load_chain.rs  mod.rs  models.rs  path_resolver.rs  pressure.rs  review_queue.rs  scanner.rs  secret_scanner.rs  settings_reader.rs
src-tauri/src/collectors/template/: config.rs  git.rs  memory.rs  mod.rs  project_files.rs  session_transcript.rs  stage.rs  template_fingerprint.rs
src-tauri/src/collectors/usage/: aggregate.rs  metadata.rs  mod.rs  models.rs  parser.rs  scanner.rs
src-tauri/src/models/: history.rs  mod.rs  project.rs
src-tauri/src/routes/: agent.rs  claude_memory.rs  history.rs  memory.rs  mod.rs  project.rs  settings.rs  usage.rs
src-tauri/src/services/: agent_service.rs  claude_memory_service.rs  history_service.rs  memory_service.rs  mod.rs  project_service.rs  settings_service.rs  usage_service.rs
(+161 files in other folders)
