[package]
name = "abtop-collector"
version = "0.1.0"
edition = "2021"
description = "Process collector library extracted from abtop"
license = "MIT"

[lib]
name = "abtop_collector"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"

[target.'cfg(target_vendor = "apple")'.dependencies]
proc_pidinfo = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
sysinfo = "0.32"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
