[package]
name = "agent-scope"
version = "0.3.6"
description = "AgentScope - AI Agent 监控桌面应用"
authors = ["ckstar"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "agent_scope_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = { version = "2", features = ["watch"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
regex = "1"
abtop-collector = { path = "../abtop-collector" }
tauri-plugin-dialog = "2.7.1"

[dev-dependencies]
tempfile = "3"

